--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </nav>
       </header>
       <main>
+        <h1>Home</h1>
         <div class="carousel-container">
             <div class="carousel">
                 <img src="./Recursos_Amazing_Events_Task_1/optional_banner_1.jpg" alt="Banner">
@@ -115,9 +116,9 @@
 
       <footer>
         <div class="social">
-            <img src="./Recursos_Amazing_Events_Task_1/facebook.png" class=" " alt="facebook icon">
-            <img src="./Recursos_Amazing_Events_Task_1/instagram.png" class=" " alt="instagram icon">
-            <img src="./Recursos_Amazing_Events_Task_1/whatsapp.png" class=" " alt="whatsapp icon">
+            <div><img src="./Recursos_Amazing_Events_Task_1/facebook.png" class=" " alt="facebook icon"></div>
+            <div><img src="./Recursos_Amazing_Events_Task_1/instagram.png" class=" " alt="instagram icon"></div>
+            <div><img src="./Recursos_Amazing_Events_Task_1/whatsapp.png" class=" " alt="whatsapp icon"></div>
         </div>
         <div>
             <p class="text">cohort 5</p>
