--- a/page1.html
+++ b/page1.html
@@ -26,6 +26,55 @@
           </nav>
         </header>
         <main>
+            <h1>UpComing Events</h1>
+        <div class="carousel-container">
+            <div class="carousel">
+                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_5.jpg" alt="Banner">
+                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" alt="Banner">
+                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_2.jpg" alt="Banner">
+            </div>
+        </div>
+        <div class="filter-search">
+            <div class="filters">
+                <label><input type="checkbox"> Categoría 1</label>
+                <label><input type="checkbox"> Categoría 2</label>
+                <label><input type="checkbox"> Categoría 3</label>
+                <label><input type="checkbox"> Categoría 4</label>
+                <label><input type="checkbox"> Categoría 5</label>
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Buscar...">
+            </div>
+        </div>
+            <div class="items-container">
+                <div class="item">
+                    <img src="./Recursos_Amazing_Events_Task_1/costume_party.jpg" alt="Halloween Night">
+                    <h3>"Halloween Night"</h3>
+                    <p>Come in your scariest costume character to win amazing prizes.</p>
+                    <div class="details">
+                        <span>$12</span>
+                        <a href="./page4.html">Details</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./Recursos_Amazing_Events_Task_1/music_concert.jpg" alt="Metallica in concert">
+                    <h3>"Metallica in concert"</h3>
+                    <p>The only concert of the most emblematic band in the world</p>
+                    <div class="details">
+                        <span>$150</span>
+                        <a href="./page4.html">Details</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./Recursos_Amazing_Events_Task_1/cinema.jpg" alt="Avengers">
+                    <h3>"Avengers"</h3>
+                    <p>Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes</p>
+                    <div class="details">
+                        <span>$250</span>
+                        <a href="./page4.html">Details</a>
+                    </div>
+                </div>
+            </div>
   
         </main>
   
