--- a/page2.html
+++ b/page2.html
@@ -26,6 +26,64 @@
           </nav>
         </header>
         <main>
+            <h1>Past Events</h1>
+        <div class="carousel-container">
+            <div class="carousel">
+                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" alt="Banner">
+                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_3.jpg" alt="Banner">
+                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_1.jpg" alt="Banner">
+            </div>
+        </div>
+        <div class="filter-search">
+            <div class="filters">
+                <label><input type="checkbox"> Categoría 1</label>
+                <label><input type="checkbox"> Categoría 2</label>
+                <label><input type="checkbox"> Categoría 3</label>
+                <label><input type="checkbox"> Categoría 4</label>
+                <label><input type="checkbox"> Categoría 5</label>
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Buscar...">
+            </div>
+        </div>
+        <div class="items-container">
+            <div class="item">
+                <img src="./Recursos_Amazing_Events_Task_1/food_fair.jpg" alt="Festival of the collectivities">
+                <h3>"Festival of the collectivities"</h3>
+                <p>Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
+                <div class="details">
+                    <span>$5</span>
+                    <a href="./page4.html">Details</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./Recursos_Amazing_Events_Task_1/outing_to_the_museum.jpg" alt="Art Exhibition">
+                <h3>"Art Exhibition"</h3>
+                <p>Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
+                <div class="details">
+                    <span>$15</span>
+                    <a href="./page4.html">Details</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./Recursos_Amazing_Events_Task_1/marathon.jpg" alt="10K for life">
+                <h3>"10K for life"</h3>
+                <p>Come and exercise, improve your health and lifestyle.</p>
+                <div class="details">
+                    <span>$3</span>
+                    <a href="./page4.html">Details</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./Recursos_Amazing_Events_Task_1/books.jpg" alt="School Book Fair">
+                <h3>"School Book Fair"</h3>
+                <p>Bring your unused school book and bring the one you need.</p>
+                <div class="details">
+                    <span>$1</span>
+                    <a href="./page4.html">Details</a>
+                </div>
+            </div>
+        </div>  
   
         </main>
   
