--- a/page4.html
+++ b/page4.html
@@ -1,44 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="./Recursos_Amazing_Events_Task_1/favicon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./Styles.css" />
     <title>Details</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="layout">
-        <header>
-          <div>
+      <header>
+        <div>
+          <img
+            class="logo"
+            src="./Recursos_Amazing_Events_Task_1/amazing_brand.png"
+            alt="logo"
+          />
+        </div>
+        <nav>
+          <a href="./index.html">Home</a>
+          <a href="./upcoming_events.html">Upcoming Events</a>
+          <a href="./past_events.html">Past Events</a>
+          <a href="./contact.html">Contact</a>
+          <a href="./stats.html">Stats</a>
+        </nav>
+      </header>
+      <main>
+        <h1>Event Details</h1>
+        <div class="event-detail-cards">
+          <div class="event-detail-card">
             <img
-              class="logo"
-              src="./Recursos_Amazing_Events_Task_1/amazing_brand.png"
-              alt="logo"
+              src="./Recursos_Amazing_Events_Task_1/food_fair.jpg"
+              alt="Food Fair"
             />
+            <div class="details">
+              <h2>Festival of the collectivities</h2>
+              <p class="date">Date: 2022-12-12</p>
+              <p class="description">
+                Enjoy your favorite dishes from different countries in a unique
+                event for the whole family.
+              </p>
+              <p class="category">Category: Food Fair</p>
+              <p class="place">Place: Room A</p>
+              <p class="capacity">Capacity: 45000</p>
+              <p class="assistance">Assistance: 42756</p>
+              <p class="price">Price: $5</p>
+            </div>
           </div>
-  
-          <nav>
-            <a href="./index.html">Home</a>
-            <a href="./page1.html">UpComing Events</a>
-            <a href="./page2.html">Past Events</a>
-            <a href="./page3.html">Contact</a>
-            <a href="./page5.html">Stats</a>
-          </nav>
-        </header>
-        <main>
-  
-        </main>
-  
-        <footer>
-          <div class="social">
-              <img src="./Recursos_Amazing_Events_Task_1/facebook.png" class=" " alt="facebook icon">
-              <img src="./Recursos_Amazing_Events_Task_1/instagram.png" class=" " alt="instagram icon">
-              <img src="./Recursos_Amazing_Events_Task_1/whatsapp.png" class=" " alt="whatsapp icon">
+          <div class="event-detail-card">
+            <img
+              src="./Recursos_Amazing_Events_Task_1/outing_to_the_museum.jpg"
+              alt="Art Exhibition"
+            />
+            <div class="details">
+              <h2>Art Exhibition</h2>
+              <p class="date">Date: 2022-11-02</p>
+              <p class="description">
+                Let's go to the art museum for an incredible tour to learn about
+                the largest dinosaurs.
+              </p>
+              <p class="category">Category: Museum</p>
+              <p class="place">Place: Field</p>
+              <p class="capacity">Capacity: 82000</p>
+              <p class="assistance">Assistance: 65892</p>
+              <p class="price">Price: $15</p>
+            </div>
           </div>
-          <div>
-              <p class="text">cohort 5</p>
+          <div class="event-detail-card">
+            <img
+              src="./Recursos_Amazing_Events_Task_1/costume_party.jpg"
+              alt="Halloween Night"
+            />
+            <div class="details">
+              <h2>Halloween Night</h2>
+              <p class="date">Date: 2024-02-12</p>
+              <p class="description">
+                Come in your scariest costume character to win amazing prizes.
+              </p>
+              <p class="category">Category: Costume Party</p>
+              <p class="place">Place: Room C</p>
+              <p class="capacity">Capacity: 12000</p>
+              <p class="estimate">Estimated Attendance: 9000</p>
+              <p class="price">Price: $12</p>
+            </div>
           </div>
+          <div class="event-detail-card">
+            <img
+              src="./Recursos_Amazing_Events_Task_1/music_concert.jpg"
+              alt="Metallica in concert"
+            />
+            <div class="details">
+              <h2>Metallica in concert</h2>
+              <p class="date">Date: 2024-01-22</p>
+              <p class="description">
+                The only concert of the most emblematic band in the world.
+              </p>
+              <p class="category">Category: Music Concert</p>
+              <p class="place">Place: Room A</p>
+              <p class="capacity">Capacity: 138000</p>
+              <p class="estimate">Estimated Attendance: 138000</p>
+              <p class="price">Price: $150</p>
+            </div>
+          </div>
+          <div class="event-detail-card">
+            <img
+              src="./Recursos_Amazing_Events_Task_1/marathon.jpg"
+              alt="10K for life"
+            />
+            <div class="details">
+              <h2>10K for life</h2>
+              <p class="date">Date: 2022-03-01</p>
+              <p class="description">
+                Come and exercise, improve your health and lifestyle.
+              </p>
+              <p class="category">Category: Race</p>
+              <p class="place">Place: Soccer Field</p>
+              <p class="capacity">Capacity: 30000</p>
+              <p class="assistance">Assistance: 25698</p>
+              <p class="price">Price: $3</p>
+            </div>
+          </div>
+          <div class="event-detail-card">
+            <img
+              src="./Recursos_Amazing_Events_Task_1/books.jpg"
+              alt="School Book Fair"
+            />
+            <div class="details">
+              <h2>School Book Fair</h2>
+              <p class="date">Date: 2022-10-15</p>
+              <p class="description">
+                Bring your unused school book and bring the one you need.
+              </p>
+              <p class="category">Category: Book Exchange</p>
+              <p class="place">Place: Room D1</p>
+              <p class="capacity">Capacity: 150000</p>
+              <p class="assistance">Assistance: 123286</p>
+              <p class="price">Price: $1</p>
+            </div>
+          </div>
+          <div class="event-detail-card">
+            <img
+              src="./Recursos_Amazing_Events_Task_1/cinema.jpg"
+              alt="Avengers"
+            />
+            <div class="details">
+              <h2>Avengers</h2>
+              <p class="date">Date: 2023-10-15</p>
+              <p class="description">
+                Marvel's Avengers 3D premiere, the start of an epic saga with
+                your best superheroes.
+              </p>
+              <p class="category">Category: Let's go to the cinema</p>
+              <p class="place">Place: Room D1</p>
+              <p class="capacity">Capacity: 9000</p>
+              <p class="estimate">Estimated Attendance: 9000</p>
+              <p class="price">Price: $250</p>
+            </div>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <div class="social">
+          <a href="#"
+            ><img
+              src="./Recursos_Amazing_Events_Task_1/facebook.png"
+              alt="facebook icon"
+          /></a>
+          <a href="#"
+            ><img
+              src="./Recursos_Amazing_Events_Task_1/instagram.png"
+              alt="instagram icon"
+          /></a>
+          <a href="#"
+            ><img
+              src="./Recursos_Amazing_Events_Task_1/whatsapp.png"
+              alt="whatsapp icon"
+          /></a>
+        </div>
+        <div>
+          <p class="text">cohort 5</p>
+        </div>
       </footer>
-      </div>
-</body>
+    </div>
+  </body>
 </html>
