--- a/page5.html
+++ b/page5.html
@@ -1,44 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="./Recursos_Amazing_Events_Task_1/favicon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./Styles.css" />
     <title>Stats</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="layout">
-        <header>
-          <div>
-            <img
-              class="logo"
-              src="./Recursos_Amazing_Events_Task_1/amazing_brand.png"
-              alt="logo"
-            />
-          </div>
-  
-          <nav>
-            <a href="./index.html">Home</a>
-            <a href="./page1.html">UpComing Events</a>
-            <a href="./page2.html">Past Events</a>
-            <a href="./page3.html">Contact</a>
-            <a href="./page5.html">Stats</a>
-          </nav>
-        </header>
-        <main>
-  
-        </main>
-  
-        <footer>
-          <div class="social">
-              <img src="./Recursos_Amazing_Events_Task_1/facebook.png" class=" " alt="facebook icon">
-              <img src="./Recursos_Amazing_Events_Task_1/instagram.png" class=" " alt="instagram icon">
-              <img src="./Recursos_Amazing_Events_Task_1/whatsapp.png" class=" " alt="whatsapp icon">
-          </div>
-          <div>
-              <p class="text">cohort 5</p>
-          </div>
+      <header>
+        <div>
+          <img
+            class="logo"
+            src="./Recursos_Amazing_Events_Task_1/amazing_brand.png"
+            alt="logo"
+          />
+        </div>
+
+        <nav>
+          <a href="./index.html">Home</a>
+          <a href="./page1.html">UpComing Events</a>
+          <a href="./page2.html">Past Events</a>
+          <a href="./page3.html">Contact</a>
+          <a href="./page5.html">Stats</a>
+        </nav>
+      </header>
+      <main>
+        <h1>Statistics</h1>
+        <div class="stats-table">
+          <table>
+            <tr>
+              <th colspan="3">Event Statistics</th>
+            </tr>
+            <tr>
+              <th>Event with highest % of assistence</th>
+              <th>Event with lowest % of assistence</th>
+              <th>Event with larger capacity</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <th colspan="3">Upcoming Events statistics by category</th>
+            </tr>
+            <tr>
+              <th>categories</th>
+              <th>Revenues</th>
+              <th>percentage of assistance</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <th colspan="3">Past Events statistics by category</th>
+            </tr>
+            <tr>
+              <th>categories</th>
+              <th>Revenues</th>
+              <th>percentage of assistance</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+      </main>
+
+      <footer>
+        <div class="social">
+          <img
+            src="./Recursos_Amazing_Events_Task_1/facebook.png"
+            class="footer_img"
+            alt="facebook icon"
+          />
+          <img
+            src="./Recursos_Amazing_Events_Task_1/instagram.png"
+            class="footer_img"
+            alt="instagram icon"
+          />
+          <img
+            src="./Recursos_Amazing_Events_Task_1/whatsapp.png"
+            class="footer_img"
+            alt="whatsapp icon"
+          />
+        </div>
+        <div>
+          <p class="text">cohort 5</p>
+        </div>
       </footer>
-      </div>
-</body>
+    </div>
+  </body>
 </html>
