--- a/page1.html
+++ b/page1.html
@@ -1,93 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="./Recursos_Amazing_Events_Task_1/favicon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./Styles.css" />
     <title>UpComing Events</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="layout">
-        <header>
-          <div>
+      <header>
+        <div>
+          <img
+            class="logo"
+            src="./Recursos_Amazing_Events_Task_1/amazing_brand.png"
+            alt="logo"
+          />
+        </div>
+
+        <nav>
+          <a href="./index.html">Home</a>
+          <a href="./page1.html">UpComing Events</a>
+          <a href="./page2.html">Past Events</a>
+          <a href="./page3.html">Contact</a>
+          <a href="./page5.html">Stats</a>
+        </nav>
+      </header>
+      <main>
+        <h1>UpComing Events</h1>
+        <div class="carousel-container">
+          <div class="carousel">
             <img
-              class="logo"
-              src="./Recursos_Amazing_Events_Task_1/amazing_brand.png"
-              alt="logo"
+              src="./Recursos_Amazing_Events_Task_1/optional_banner_5.jpg"
+              alt="Banner"
+            />
+            <img
+              src="./Recursos_Amazing_Events_Task_1/optional_banner_4.jpg"
+              alt="Banner"
+            />
+            <img
+              src="./Recursos_Amazing_Events_Task_1/optional_banner_2.jpg"
+              alt="Banner"
+            />
+            <img
+              src="./Recursos_Amazing_Events_Task_1/optional_banner_5.jpg"
+              alt="Banner"
             />
           </div>
-  
-          <nav>
-            <a href="./index.html">Home</a>
-            <a href="./page1.html">UpComing Events</a>
-            <a href="./page2.html">Past Events</a>
-            <a href="./page3.html">Contact</a>
-            <a href="./page5.html">Stats</a>
-          </nav>
-        </header>
-        <main>
-            <h1>UpComing Events</h1>
-        <div class="carousel-container">
-            <div class="carousel">
-                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_5.jpg" alt="Banner">
-                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" alt="Banner">
-                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_2.jpg" alt="Banner">
-            </div>
         </div>
         <div class="filter-search">
-            <div class="filters">
-                <label><input type="checkbox"> Categoría 1</label>
-                <label><input type="checkbox"> Categoría 2</label>
-                <label><input type="checkbox"> Categoría 3</label>
-                <label><input type="checkbox"> Categoría 4</label>
-                <label><input type="checkbox"> Categoría 5</label>
-            </div>
-            <div class="search-bar">
-                <input type="text" placeholder="Buscar...">
-            </div>
+          <div class="filters">
+            <label><input type="checkbox" /> Categoría 1</label>
+            <label><input type="checkbox" /> Categoría 2</label>
+            <label><input type="checkbox" /> Categoría 3</label>
+            <label><input type="checkbox" /> Categoría 4</label>
+            <label><input type="checkbox" /> Categoría 5</label>
+          </div>
+          <div class="search-bar">
+            <input type="text" placeholder="Buscar..." />
+          </div>
         </div>
-            <div class="items-container">
-                <div class="item">
-                    <img src="./Recursos_Amazing_Events_Task_1/costume_party.jpg" alt="Halloween Night">
-                    <h3>"Halloween Night"</h3>
-                    <p>Come in your scariest costume character to win amazing prizes.</p>
-                    <div class="details">
-                        <span>$12</span>
-                        <a href="./page4.html">Details</a>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./Recursos_Amazing_Events_Task_1/music_concert.jpg" alt="Metallica in concert">
-                    <h3>"Metallica in concert"</h3>
-                    <p>The only concert of the most emblematic band in the world</p>
-                    <div class="details">
-                        <span>$150</span>
-                        <a href="./page4.html">Details</a>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./Recursos_Amazing_Events_Task_1/cinema.jpg" alt="Avengers">
-                    <h3>"Avengers"</h3>
-                    <p>Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes</p>
-                    <div class="details">
-                        <span>$250</span>
-                        <a href="./page4.html">Details</a>
-                    </div>
-                </div>
+        <div id="contenedor" class="items_container">
+          <div class="item">
+            <img class="item_img"
+              src="./Recursos_Amazing_Events_Task_1/costume_party.jpg"
+              alt="Halloween Night"
+            />
+            <h3 class="item_h3">"Halloween Night"</h3>
+            <p class="item_p">
+              Come in your scariest costume character to win amazing prizes.
+            </p>
+            <div class="item_details">
+              <span>$12</span>
+              <a class="item_details_a" href="./page4.html">Details</a>
             </div>
-  
-        </main>
-  
-        <footer>
-          <div class="social">
-              <img src="./Recursos_Amazing_Events_Task_1/facebook.png" class=" " alt="facebook icon">
-              <img src="./Recursos_Amazing_Events_Task_1/instagram.png" class=" " alt="instagram icon">
-              <img src="./Recursos_Amazing_Events_Task_1/whatsapp.png" class=" " alt="whatsapp icon">
           </div>
-          <div>
-              <p class="text">cohort 5</p>
+          <div class="item">
+            <img class="item_img"
+              src="./Recursos_Amazing_Events_Task_1/music_concert.jpg"
+              alt="Metallica in concert"
+            />
+            <h3 class="item_h3">"Metallica in concert"</h3>
+            <p class="item_p">The only concert of the most emblematic band in the world</p>
+            <div class="item_details">
+              <span>$150</span>
+              <a class="item_details_a" href="./page4.html">Details</a>
+            </div>
           </div>
+          <div class="item">
+            <img class="item_img"
+              src="./Recursos_Amazing_Events_Task_1/cinema.jpg"
+              alt="Avengers"
+            />
+            <h3 class="item_h3">"Avengers"</h3>
+            <p class="item_p">
+              Marvel's Avengers 3d premiere the start of an epic saga with your
+              best superheroes
+            </p>
+            <div class="item_details">
+              <span>$250</span>
+              <a class="item_details_a" href="./page4.html">Details</a>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <footer>
+        <div class="social">
+          <img
+            src="./Recursos_Amazing_Events_Task_1/facebook.png"
+            class="footer_img"
+            alt="facebook icon"
+          />
+          <img
+            src="./Recursos_Amazing_Events_Task_1/instagram.png"
+            class="footer_img"
+            alt="instagram icon"
+          />
+          <img
+            src="./Recursos_Amazing_Events_Task_1/whatsapp.png"
+            class="footer_img"
+            alt="whatsapp icon"
+          />
+        </div>
+        <div>
+          <p class="text">cohort 5</p>
+        </div>
       </footer>
-      </div>
-</body>
+    </div>
+    <script src="./upcoming_events.js"></script>
+  </body>
 </html>
