--- a/page2.html
+++ b/page2.html
@@ -1,102 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="./Recursos_Amazing_Events_Task_1/favicon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./Styles.css" />
     <title>Past Events</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="layout">
-        <header>
-          <div>
+      <header>
+        <div>
+          <img
+            class="logo"
+            src="./Recursos_Amazing_Events_Task_1/amazing_brand.png"
+            alt="logo"
+          />
+        </div>
+
+        <nav>
+          <a href="./index.html">Home</a>
+          <a href="./page1.html">UpComing Events</a>
+          <a href="./page2.html">Past Events</a>
+          <a href="./page3.html">Contact</a>
+          <a href="./page5.html">Stats</a>
+        </nav>
+      </header>
+      <main>
+        <h1>Past Events</h1>
+        <div class="carousel-container">
+          <div class="carousel">
             <img
-              class="logo"
-              src="./Recursos_Amazing_Events_Task_1/amazing_brand.png"
-              alt="logo"
+              src="./Recursos_Amazing_Events_Task_1/optional_banner_4.jpg"
+              alt="Banner"
+            />
+            <img
+              src="./Recursos_Amazing_Events_Task_1/optional_banner_3.jpg"
+              alt="Banner"
+            />
+            <img
+              src="./Recursos_Amazing_Events_Task_1/optional_banner_1.jpg"
+              alt="Banner"
+            />
+            <img
+              src="./Recursos_Amazing_Events_Task_1/optional_banner_4.jpg"
+              alt="Banner"
             />
           </div>
-  
-          <nav>
-            <a href="./index.html">Home</a>
-            <a href="./page1.html">UpComing Events</a>
-            <a href="./page2.html">Past Events</a>
-            <a href="./page3.html">Contact</a>
-            <a href="./page5.html">Stats</a>
-          </nav>
-        </header>
-        <main>
-            <h1>Past Events</h1>
-        <div class="carousel-container">
-            <div class="carousel">
-                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_4.jpg" alt="Banner">
-                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_3.jpg" alt="Banner">
-                <img src="./Recursos_Amazing_Events_Task_1/optional_banner_1.jpg" alt="Banner">
-            </div>
         </div>
         <div class="filter-search">
-            <div class="filters">
-                <label><input type="checkbox"> Categoría 1</label>
-                <label><input type="checkbox"> Categoría 2</label>
-                <label><input type="checkbox"> Categoría 3</label>
-                <label><input type="checkbox"> Categoría 4</label>
-                <label><input type="checkbox"> Categoría 5</label>
-            </div>
-            <div class="search-bar">
-                <input type="text" placeholder="Buscar...">
-            </div>
+          <div class="filters">
+            <label><input type="checkbox" /> Categoría 1</label>
+            <label><input type="checkbox" /> Categoría 2</label>
+            <label><input type="checkbox" /> Categoría 3</label>
+            <label><input type="checkbox" /> Categoría 4</label>
+            <label><input type="checkbox" /> Categoría 5</label>
+          </div>
+          <div class="search-bar">
+            <input type="text" placeholder="Buscar..." />
+          </div>
         </div>
-        <div class="items-container">
-            <div class="item">
-                <img src="./Recursos_Amazing_Events_Task_1/food_fair.jpg" alt="Festival of the collectivities">
-                <h3>"Festival of the collectivities"</h3>
-                <p>Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
-                <div class="details">
-                    <span>$5</span>
-                    <a href="./page4.html">Details</a>
-                </div>
+        <div id="contenedor" class="items_container">
+          <div class="item">
+            <img class="item_img"
+              src="./Recursos_Amazing_Events_Task_1/food_fair.jpg"
+              alt="Festival of the collectivities"
+            />
+            <h3 class="item_h3">"Festival of the Collectivities"</h3>
+            <p class="item_p">
+              Enjoy your favorite dishes from different countries in a unique
+              event for the whole family.
+            </p>
+            <div class="item_details">
+              <span>$5</span>
+              <a class="item_details_a" href="./page4.html">Details</a>
             </div>
-            <div class="item">
-                <img src="./Recursos_Amazing_Events_Task_1/outing_to_the_museum.jpg" alt="Art Exhibition">
-                <h3>"Art Exhibition"</h3>
-                <p>Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
-                <div class="details">
-                    <span>$15</span>
-                    <a href="./page4.html">Details</a>
-                </div>
-            </div>
-            <div class="item">
-                <img src="./Recursos_Amazing_Events_Task_1/marathon.jpg" alt="10K for life">
-                <h3>"10K for life"</h3>
-                <p>Come and exercise, improve your health and lifestyle.</p>
-                <div class="details">
-                    <span>$3</span>
-                    <a href="./page4.html">Details</a>
-                </div>
-            </div>
-            <div class="item">
-                <img src="./Recursos_Amazing_Events_Task_1/books.jpg" alt="School Book Fair">
-                <h3>"School Book Fair"</h3>
-                <p>Bring your unused school book and bring the one you need.</p>
-                <div class="details">
-                    <span>$1</span>
-                    <a href="./page4.html">Details</a>
-                </div>
-            </div>
-        </div>  
-  
-        </main>
-  
-        <footer>
-          <div class="social">
-              <img src="./Recursos_Amazing_Events_Task_1/facebook.png" class=" " alt="facebook icon">
-              <img src="./Recursos_Amazing_Events_Task_1/instagram.png" class=" " alt="instagram icon">
-              <img src="./Recursos_Amazing_Events_Task_1/whatsapp.png" class=" " alt="whatsapp icon">
           </div>
-          <div>
-              <p class="text">cohort 5</p>
+          <div class="item">
+            <img class="item_img"
+              src="./Recursos_Amazing_Events_Task_1/outing_to_the_museum.jpg"
+              alt="Art Exhibition"
+            />
+            <h3 class="item_h3">"Art Exhibition"</h3>
+            <p class="item_p">
+              Let's go to the art museum for an incredible tour to learn about
+              the largest dinosaurs.
+            </p>
+            <div class="item_details">
+              <span>$15</span>
+              <a class="item_details_a" href="./page4.html">Details</a>
+            </div>
           </div>
+          <div class="item">
+            <img class="item_img"
+              src="./Recursos_Amazing_Events_Task_1/marathon.jpg"
+              alt="10K for life"
+            />
+            <h3 class="item_h3">"10K for life"</h3>
+            <p class="item_p">Come and exercise, improve your health and lifestyle.</p>
+            <div class="item_details">
+              <span>$3</span>
+              <a class="item_details_a" href="./page4.html">Details</a>
+            </div>
+          </div>
+          <div class="item">
+            <img class="item_img"
+              src="./Recursos_Amazing_Events_Task_1/books.jpg"
+              alt="School Book Fair"
+            />
+            <h3 class="item_h3">"School Book Fair"</h3>
+            <p class="item_p">Bring your unused school books and find the ones you need.</p>
+            <div class="item_details">
+              <span>$1</span>
+              <a class="item_details_a" href="./page4.html">Details</a>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <footer>
+        <div class="social">
+          <img
+            src="./Recursos_Amazing_Events_Task_1/facebook.png"
+            class="footer_img"
+            alt="facebook icon"
+          />
+          <img
+            src="./Recursos_Amazing_Events_Task_1/instagram.png"
+            class="footer_img"
+            alt="instagram icon"
+          />
+          <img
+            src="./Recursos_Amazing_Events_Task_1/whatsapp.png"
+            class="footer_img"
+            alt="whatsapp icon"
+          />
+        </div>
+        <div>
+          <p class="text">cohort 5</p>
+        </div>
       </footer>
-      </div>
-</body>
+    </div>
+    <script src="./past_events.js"></script>
+  </body>
 </html>
